# FabApp

./: LICENSE  README.md
Backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  exemple.env
Backend/alembic/: env.py
Backend/alembic/versions/: a9783f94aa02_init.py  d3cd31925a6a_temp_table.py
Backend/api/: Cargo.toml
Backend/api/src/: main.rs
Backend/api/src/api/: connection.rs  mod.rs  user.rs
Backend/api/src/api/models/: mod.rs  users_structs.rs
Backend/api/src/email/: email.rs
Backend/api/src/model/: services.rs
Backend/api/src/utilities/: env.rs  mod.rs  structs.rs
Backend/database/: setup.sql
Backend/docs/: .buildinfo  FabLab.html  example.html  exemple.html  genindex.html  index.html  intro.html  objects.inv  searchindex.js
Backend/docs/.doctrees/: FabLab.doctree  environment.pickle  example.doctree  exemple.doctree  index.doctree  intro.doctree
Backend/docs/_sources/: FabLab.md.txt  exemple.md.txt  intro.md.txt
Backend/docs/_static/: sphinx_immaterial_theme.8c26b4a160ba6c409.min.css  sphinx_immaterial_theme.ef22dd1b8d42cb703.min.css
Backend/requirements/: build-requirements.txt  dev-requirements.txt  docs-requirements.txt  format-requirements.txt  lint-requirements.txt  nox-requirements.txt  requirements.txt  test-requirements.txt
Backend/src/: main.py
Backend/src/utils/: db.py  (+4 more)
Backend/test/: main_test.py
fabapp/: README.md  pubspec.yaml
fabapp/lib/: main.dart
fabapp/linux/: CMakeLists.txt  my_application.cc
fabapp/test/: widget_test.dart
fabapp/web/: index.html  manifest.json
fabapp/windows/: CMakeLists.txt
(+80 files in other folders)
